--- a/GenAIassignment.ipynb
+++ b/GenAIassignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfn07qquJGYTEtlz93E4yt",
+      "authorship_tag": "ABX9TyP3uzNq2CKgiU0VKQ1s4H5z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UJN916_yVW1s",
-        "outputId": "7463349b-034b-48f3-a1aa-ede647664290"
+        "outputId": "f1ba9e18-1224-4a29-f550-c1e54c5d13ea"
       },
       "outputs": [
         {
@@ -69,6 +69,8 @@
         }
       ],
       "source": [
+        "# Problem 1\n",
+        "\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
